test/errors/004_circular.eu
#!/usr/bin/env eu -B
# -*- mode: conf -*-

f: f(f)
